--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.5",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.8.1",
     "framer-motion": "^6.3.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
