--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@fontsource/roboto": "^4.5.7",
     "@mui/icons-material": "^5.8.0",
     "@mui/lab": "^5.0.0-alpha.83",
-    "@mui/material": "^5.8.0",
+    "@mui/material": "^5.8.1",
     "@mui/styled-engine-sc": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -18,6 +18,8 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.1",
     "framer-motion": "^6.3.3",
+    "install": "^0.13.0",
+    "npm": "^8.11.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
