--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "npm": "^8.11.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.1.0",
     "react-full-screen": "^1.1.0",
     "react-router-dom": "^6.3.0",
