--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.5",
     "bootstrap": "^5.1.3",
+    "cal-parser": "^1.0.2",
     "firebase": "^9.8.1",
     "framer-motion": "^6.3.3",
+    "fs": "^0.0.1-security",
+    "ical-js-parser": "^0.6.9",
+    "ics-to-json": "^1.0.0",
     "install": "^0.13.0",
     "npm": "^8.11.0",
     "react": "^18.1.0",
@@ -28,6 +32,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.2",
+    "rrule": "^2.7.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
