--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-dom": "^18.1.0",
     "react-full-screen": "^1.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.2",
     "rrule": "^2.7.0",
     "styled-components": "^5.3.5",
