--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.7",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.8.0",
     "@mui/lab": "^5.0.0-alpha.83",
     "@mui/material": "^5.8.1",
     "@mui/styled-engine-sc": "^5.8.0",
+    "@mui/styles": "^5.9.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -31,6 +33,7 @@
     "react-full-screen": "^1.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.7",
     "react-transition-group": "^4.4.2",
     "rrule": "^2.7.0",
     "styled-components": "^5.3.5",
